tests/unit/compile/cases/syntax-errors/20.instruction.unknown.t
Lorem {{ %foobar }} ipsum
---- THROW% ----
Unknown instructions `foobar` near `foobar }} ipsum` in `%s` at line 1
